# MOHID-Lagrangian

./: .gitignore  .travis.yml  CMakeLists.txt  MOHIDLagrangian_install.sh  MakeMOHIDLagrangian.sh  README.md  RunCmake.bat  compile.og  unix.gitignore
ExternalLibs/: MakeLibraries.sh  MakeLibraries_tests.sh  README.txt  RunCmake.bat  RunCmakeLibraries.bat
ExternalLibs/Base/: CMakeLists.txt  MakeLibraries.sh  RunCmake.bat
ExternalLibs/Base/BeFoR64/: CMakeLists.txt
ExternalLibs/Base/PENF/: CMakeLists.txt
ExternalLibs/Base/StringiFor/: CMakeLists.txt
ExternalLibs/Base/VTKFortran/: CMakeLists.txt
ExternalLibs/Base/VecFor/: CMakeLists.txt
ExternalLibs/MOHID/: CMakeLists.txt  MakeLibraries.sh  RunCmake.bat
ExternalLibs/MOHID/MOHIDBase1/: CMakeLists.txt  ModuleBenthos.F90  ModuleBivalve.F90  ModuleCEQUALW2.F90  ModuleCuda.F90  ModuleDischarges.F90  ModuleDrawing.F90  ModuleEnterData.F90  ModuleFunctions.F90  ModuleGlobalData.F90  ModuleHDF5_OO.F90  ModuleHydroIntegration.F90  ModuleInterface.F90  ModuleLUD.F90  ModuleLife.F90  ModuleLightExtinction.F90  ModuleMacroAlgae.F90  ModulePhreeqC.F90  ModuleProfile.F90  ModuleSeagrassSedimInteraction.F90  ModuleSeagrassWaterInteraction.F90  ModuleStopWatch.F90  ModuleTask2000.F  ModuleTime.F90  ModuleTimeSerie.F90  ModuleWaterQuality.F90  mpif.F90  proj4.F90
ExternalLibs/MOHID/MOHIDBase2/: CMakeLists.txt  ModuleAdvectionDiffusion.F90  ModuleAtmosphere.F90  ModuleBasinGeometry.F90  ModuleBoxDif.F90  ModuleChainReactions.F90  ModuleField4D.F90  ModuleFillMatrix.F90  ModuleGeometry.F90  ModuleGridData.F90  ModuleHorizontalGrid.F90  ModuleLitter.F90  ModuleMap.F90  ModuleStatistic.F90
ExternalLibs/Netcdf_4.4.1.1/: Readme.txt
ExternalLibs/Proj4/Linux/proj4-fortran/: AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  README  bootstrap  cfortran.doc  cfortran.h  cgfortran.h  config.status  configure  configure.in  depcomp  fort-proj.c  install-sh  missing  proj4.f90  proj4.mod  test-proj.f90
ExternalLibs/Proj4/Linux/proj4-fortran/.deps/: fort-proj.Po  fort-proj.Tpo
ExternalLibs/Proj4/Linux/proj4-fortran/autom4te.cache/: output.0  requests  traces.0  traces.1
ExternalLibs/alt/: MakeLibraries_alt.sh
ExternalLibs/datetime-fortran/: CMakeLists.txt  MakeLibraries.sh  RunCmake.bat
ExternalLibs/fortran-csv-module/: CMakeLists.txt  MakeLibraries.sh  RunCmake.bat
ExternalLibs/fox/: CMakeLists.txt  MakeLibraries.sh  RunCmake.bat
ExternalLibs/netcdf-fortran-4.4.4/: Makefile  VERSION  config.h  config.status  libtool  netcdf-fortran.pc  nf-config
Libs/: CMakeLists.txt  MakeLibraries.sh  README.txt  RunCmake.bat  cla_test.f90
Libs/CLA/: CMakeLists.txt  cla.f90  kinds.f90
Libs/FLAP/: CMakeLists.txt
Libs/FoXy/: CMakeLists.txt
Libs/PENF/: CMakeLists.txt
Libs/build_linux/: Makefile  (+2 more)
Old/: CMakeListsLib.txt
QuickStart/: readme.md
UserGuides/: End-User_Starter_Guide_MOHID-Lagrangian.docx  MOHID-Lagrangian-Installation-Guide.docx  MOHID-Lagrangian_Short_Guide.docx  ParaView_crash_course.docx
buildScripts/: 0-basics-ExternalLibs.sh  1-install_ExternalLibs.sh  2-compile_Lagrangian.sh  MOHIDLagrangian_install.sh  MakeEnvMOHIDLagrangian.bat  MakeEnvMOHIDLagrangian.sh  MakeEnvMOHIDLagrangian_anaconda.sh  MakeEnvMOHIDLagrangian_noconda.bat  MakeEnvMOHIDLagrangian_noconda.sh  MakeMOHIDLagrangian.sh  README.txt  RunCmakeMOHIDLagrangian.bat  environment.yml  environmentLinux.yml  environmentWindows.yml  requirements.txt  requirementsLinux.txt  requirementsWindows.txt
build_win/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  MOHIDLagrangian.sdf  MOHIDLagrangian.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
doc/: Doxyfile
docs/: Doxyfile  MOHID-Lagrangian Add-Kernels.docx  MOHID-Lagrangian-Installation-Guide.docx  MOHID-Lagrangian-Installation-Guide_20.10.docx  MOHID-Lagrangian_Short_Guide.docx  MOHID-Lagrangian_Short_User_Guide_v20.10.docx  UsingMOHIDLagrangian.pptx  compilacion_ubuntu.docx  index.html
src/MOHIDBase1/: CMakeLists.txt  ModuleBenthicEcology.F90  ModuleBivalve.F90  ModuleEnterData.F90  ModuleHDF5.F90  ModuleSedimentQuality.F90  ModuleTriangulation.F90  ModuleWWTPQ.F90
src/MOHIDBase2/: CMakeLists.txt  ModuleGridData.F90  ModuleHorizontalGrid.F90  ModuleHorizontalMap.F90  ModuleInterpolation.F90  ModuleNETCDF.F90
src/MOHIDLagrangianApp/: CMakeLists.txt  MOHIDLagrangian.f90
src/MOHIDLagrangianLib/: AoT.f90  CMakeLists.txt  HDF5Parser.f90  HDF5writter.f90  MTimeseriesParser.f90  NetCDFparser.f90  abstractLinkedList.f90  background.f90  blocks.f90  boundingbox.f90  commonModules.f90  container.f90  container_mod.mod  csvparser.f90  emitter.f90  fieldsTypes.f90  geometry.f90  interpolator.f90  kernel.f90  kernelAbstraction.f90  kernelBuoyancy.f90  kernelColiforms.f90  kernelDetritus.f90  kernelLitter.f90  kernelOil.f90  kernelUtils.f90  kernelVerticalMotion.f90  kernelWaterQuality.f90  link.f90  nc_parser.f90  simulation.f90  simulationAbout.f90  simulationGlobals.f90  simulationInitialize.f90  simulationInputStreamer.f90  simulationLogger.f90  simulationMemory.f90  simulationOutputStreamer.f90  simulationParallel_omp.f90  simulationPrecision.f90  (+32 more)
src/app/: CMakeLists.txt  MOHIDLagrangian.f90  main.f90  read_nc.f90  write_vtu.f90
src/lib/: AoT.f90  CMakeLists.txt  about.f90  abstract_LinkedList.f90  abstract_container_array.f90  abstract_list.f90  background.f90  blocks.f90  boundingbox.f90  common_modules.f90  container.f90  container_link_class.f90  container_linked_list.f90  container_mod.mod  emitter.f90  fields_types.f90  finalize.f90  geometry.f90  initialize.f90  integrator.f90  interpolator.f90  link.f90  netcdf_mod.f90  netcdf_mod.f90_  pointer_link_class.f90  pointer_linked_list.f90  read_nc.f90  simulation.f90  simulation_about.f90  simulation_globals.f90  simulation_initialize.f90  simulation_initialize_mod.f90  simulation_input_streamer.f90  simulation_logger.f90  simulation_memory.f90  simulation_output_streamer.f90  simulation_parallel_omp.f90  simulation_parameters.f90  simulation_precision.f90  simulation_testmaker.f90  (+28 more)
(+6531 files in other folders)
