message("At Application CMAKE file")

# Set Properties->General->Configuration Type to Application(.exe)
# Creates app.exe with the listed sources (main.cxx)
# Adds sources to the Solution Explorer

add_executable(${BIN_NAME} MOHIDLagrangian.f90)
#add_executable(nc_reader read_nc.f90)

if (CMAKE_HOST_WIN32)
    set(WINDOWS 1)
elseif(CMAKE_HOST_APPLE)
    set(LINUX 1)
    set(OSX 1)
elseif(CMAKE_HOST_UNIX)
    set(LINUX 1)
endif()

# IF(NOT NETCDF_C_LIBRARY)
  # FIND_LIBRARY(NETCDF_C_LIBRARY NAMES netcdf NETCDF)
  # IF(NOT NETCDF_C_LIBRARY)
    # MESSAGE(FATAL_ERROR "libnetcdf not found.")
  # ENDIF()
# ENDIF()
# MESSAGE(STATUS "Found netcdf library: ${NETCDF_C_LIBRARY}")
# IF(NOT NETCDF_INCLUDE_DIR)
  # FIND_PATH(NETCDF_INCLUDE_DIR NAMES netcdf.h)
  # IF(NOT NETCDF_INCLUDE_DIR)
    # MESSAGE(FATAL_ERROR "netcdf.h not found.")
  # ENDIF()
# ENDIF()
# MESSAGE(STATUS "Found netcdf.h in ${NETCDF_INCLUDE_DIR}")

# Properties->Fortran->General->Additional Include Directories
include_directories (${LIBRARY_OUTPUT_PATH})

message(STATUS "Added " ${LIB_NAME} " output path " ${LIBRARY_OUTPUT_PATH})

if(WINDOWS)
  set(SIMPLE_LIBS_PATH ${PROJECT_SOURCE_DIR}/Libs/Libs_build_win)  
  set(FOX_LIBS_PATH ${PROJECT_SOURCE_DIR}/Libs/fox/build_win)
elseif(LINUX)
  set(SIMPLE_LIBS_PATH ${PROJECT_SOURCE_DIR}/Libs/Libs_build_linux)  
  set(FOX_LIBS_PATH ${PROJECT_SOURCE_DIR}/Libs/fox/build_linux)
endif()
set(SIMPLE_LIBS_MODULES ${SIMPLE_LIBS_PATH}/modules)
set(SIMPLE_LIBS_LIB ${SIMPLE_LIBS_PATH}/lib)
set(FOX_LIBS_MODULES_PATH ${FOX_LIBS_PATH}/modules)
set(FOX_LIBS_LIB_PATH ${FOX_LIBS_PATH}/lib)

include_directories(${SIMPLE_LIBS_PATH})
include_directories(${SIMPLE_LIBS_MODULES})
include_directories(${SIMPLE_LIBS_LIB})
include_directories(${FOX_LIBS_PATH})
include_directories(${FOX_LIBS_MODULES_PATH})
include_directories(${FOX_LIBS_LIB_PATH})
#include_directories (${NETCDF_INCLUDE_DIR})

message(STATUS "Added simple Libraries path " ${SIMPLE_LIBS_PATH})
#message(STATUS "Added SIMPLE Library module path " ${SIMPLE_LIBS_MODULES})
#message(STATUS "Added SIMPLE Library .lib path " ${SIMPLE_LIBS_LIB})
message(STATUS "Added FoX Library path " ${FOX_LIBS_PATH})
#message(STATUS "Added NetCDF Library path " ${NETCDF_INCLUDE_DIR})

# Properties->Linker->Input->Additional Dependencies
if(WINDOWS)
  file(GLOB SIMPLE_LIBS "${PROJECT_SOURCE_DIR}/Libs/Libs_build_win/lib/RELEASE/*.lib")
  file(GLOB FOX_LIBS "${FOX_LIBS_LIB_PATH}/RELEASE/*.lib")
elseif(LINUX)
  file(GLOB SIMPLE_LIBS "${PROJECT_SOURCE_DIR}/Libs/Libs_build_linux/lib/*.a")
  file(GLOB FOX_LIBS "${FOX_LIBS_LIB_PATH}/*.a")
endif()

message(STATUS "Targeting library " ${LIB_NAME})
#message(STATUS "Targeting SIMPLE libraries " ${SIMPLE_LIBS})

target_link_libraries (${BIN_NAME}  ${LIB_NAME})
#target_link_libraries (nc_reader  ${LIB_NAME})
#target_link_libraries (nc_reader  ${NETCDF_C_LIBRARY})
if(WINDOWS)
  target_link_libraries (${BIN_NAME} ${SIMPLE_LIBS})
  target_link_libraries (${BIN_NAME} ${FOX_LIBS})
  #target_link_libraries (nc_reader ${SIMPLE_LIBS})
elseif(OSX)
  target_link_libraries (${BIN_NAME} ${SIMPLE_LIBS})
  target_link_libraries (${BIN_NAME} ${FOX_LIBS})
  #target_link_libraries (nc_reader ${SIMPLE_LIBS})
elseif(LINUX)
  target_link_libraries (${BIN_NAME}  -Wl,--start-group ${SIMPLE_LIBS} -Wl,--end-group)
  target_link_libraries (${BIN_NAME}  -Wl,--start-group ${FOX_LIBS} -Wl,--end-group)
  #target_link_libraries (nc_reader -Wl,--start-group ${SIMPLE_LIBS} -Wl,--end-group)
endif()

# Creates a folder "executables" and adds target project (app.vcproj) under it
set_property(TARGET ${BIN_NAME} PROPERTY FOLDER "executables")
set_property(TARGET ${BIN_NAME} PROPERTY LINKER_LANGUAGE Fortran)
#set_property(TARGET nc_reader PROPERTY FOLDER "executables")
#set_property(TARGET nc_reader PROPERTY LINKER_LANGUAGE Fortran)

# Properties->General->Output Directory
set_target_properties(${BIN_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)					  
#set_target_properties(nc_reader PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)